# TEST1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ANALYSIS_FILES_INDEX.md  API_FIXES_SUMMARY_2025-11-09.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CODE_INTEGRITY_REPORT.md  CODE_REVIEW_REPORT.md  CODE_STRUCTURE_ANALYSIS.md  COMPREHENSIVE_BUG_FIXES_2025-11-09.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST_CN.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_MODULES_README.md  EXECUTIVE_SUMMARY.md  HABITAT_SETUP_GUIDE.md  HM3D_数据集配置说明.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PROJECT_COMPLETENESS_CHECKLIST.md  PROJECT_EVALUATION_REPORT.md  PROJECT_SUMMARY.md  PUBLICATION_RECOMMENDATIONS.md  QUICK_START.md  QUICK_START_EVALUATION.md  README.md  THEORETICAL_CONTRIBUTIONS.md  code_analysis.py  config.yaml  config_rtx4060.yaml  config_server.yaml  demo.py  docker-compose.yml  docker-entrypoint.sh  fix_installation.sh  pyproject.toml  pytest.ini  (+6 more)
.github/workflows/: ci.yml  docker.yml  publish.yml
configs/: datasets_vla_benchmark.yaml  experiment_vla_comprehensive.yaml  infer_real_robot.yaml  metrics_vla_standard.yaml  tasks_vla_extended.yaml  train_minival_4060.yaml  train_vln_ce.yaml
docs/: API_USAGE_GUIDE.md  DEPLOYMENT.md  PROJECT_OVERVIEW.md  README.md  RTX4060_DEPLOYMENT_GUIDE.md  TRAINING_DATA_SPEC.md  VLA_EXPERIMENTS_GUIDE.md
docs/development/: BUG_FIXES_HISTORY.md
docs/technical/: REFERENCE.md
scripts/: download_datasets.sh  download_habitat_data.py  download_hm3d_manual.sh  download_models.sh  eval_vln_ce.sh  generate_episodes.py  install_habitat.sh  real_robot_demo.sh  reorganize_hm3d.sh  run_complete_evaluation.py  run_conference_experiments.py  run_evaluation.py  run_vla_experiments.py  setup_datasets.sh  setup_environment.sh  train.sh  verify_installation.py
src/: __init__.py  affordance_extractor.py  conformal_metric.py  dual_scalar_poisson_solver.py  openvla_wrapper.py  slingshot_policy.py  vln_dataset.py
src/baselines/: sota_baselines.py
src/core/: affordance.py  agent_modules.py  diffusion_policy.py  dual_system.py  gr_field.py  path_optimizer.py  peft_modules.py  perception.py  trajectory_attention.py  vla_gr_agent.py  vla_gr_agent_v2.py
src/datasets/: habitat_dataset.py  vla_dataset_loader.py
src/environments/: habitat_env.py  habitat_env_v3.py
src/evaluation/: conference_evaluator.py  evaluator.py  vla_metrics.py
src/real_robot/: __init__.py  ros2_wrapper.py
src/theory/: theoretical_analysis.py  theoretical_framework.py
src/training/: losses.py  (+1 more)
tests/: __init__.py  conftest.py
(+9 files in other folders)
